chore: Runtime.getRuntime().exec(String x) is not supported anymore