@@ -26,6 +26,7 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
 import org.junit.After;
@@ -33,7 +34,6 @@ import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 
@@ -121,8 +121,7 @@ public class RestoreUserAddressBooksTaskTests {
 		testContext = new BmTestContext(SecurityContext.SYSTEM);
 
 		changUid = PopulateHelper.addUser(login, domain, Routing.internal);
-		testContext.provider().instance(ISystemConfiguration.class)
-				.updateMutableValues(ImmutableMap.of("db_version", "3.1.0"));
+		testContext.provider().instance(ISystemConfiguration.class).updateMutableValues(Map.of("db_version", "3.1.0"));
 
 		restorable = new Restorable();
 		restorable.domainUid = domain;
@@ -133,7 +132,7 @@ public class RestoreUserAddressBooksTaskTests {
 
 	private List<String> getTagsExcept(String... except) {
 		// tag & assign host for everything
-		List<String> tags = new LinkedList<String>();
+		List<String> tags = new LinkedList<>();
 
 		IDomainTemplate dt = ServerSideServiceProvider.getProvider(SecurityContext.SYSTEM)
 				.instance(IDomainTemplate.class);
@@ -165,8 +164,8 @@ public class RestoreUserAddressBooksTaskTests {
 			p.waitFor(10, TimeUnit.SECONDS);
 		}
 
-		Process p = Runtime.getRuntime()
-				.exec("sudo chown -R " + System.getProperty("user.name") + " /var/spool/bm-hollowed");
+		Process p = Runtime.getRuntime().exec(new String[] { "sudo", "chown", "-R", System.getProperty("user.name"),
+				":", System.getProperty("user.name"), "/var/spool/bm-hollowed" });
 		p.waitFor(10, TimeUnit.SECONDS);
 	}
 
